--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
         <div class="logo">Admin BeeBarber</div>
         <a href="javascript:void(0)" id="home" onclick="loadPage('home.html')">Home</a>
         <a href="javascript:void(0)" id="about" onclick="loadPage('Oder.html')">Đơn Hàng</a>
-        <a href="javascript:void(0)" id="services" onclick="loadPage('Categori.html')">Thể loại dịch vụ</a>
+        <a href="javascript:void(0)" id="services" onclick="loadPage('Category.html')">Thể loại dịch vụ</a>
         <a href="javascript:void(0)" id="contact" onclick="loadPage('DichVu.html')"> Dịch vụ</a>
         <a href="javascript:void(0)" id="contact" onclick="loadPage('TheLoaiSP.html')">Thể loại sản phẩm</a>
         <a href="javascript:void(0)" id="contact" onclick="loadPage('SanPham.html')">Sản phẩm</a>
