--- a/src/TheLoaiSP.html
+++ b/src/TheLoaiSP.html
@@ -1,11 +1,382 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thể Loại Sản Phẩm</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            width: 100%;
+            display: flex;
+            padding: 20px;
+        }
+
+        .form-container {
+            width: 30%;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin-right: 20px;
+        }
+
+        .form-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .form-container label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
+        .form-container input[type="text"],
+        .form-container input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .form-container button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px;
+            width: 100%;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .form-container button:hover {
+            background-color: #45a049;
+        }
+
+        .form-container img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+
+        .list-container {
+            width: 70%;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            overflow-y: auto;
+        }
+
+        .list-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            padding: 10px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        .btn-edit,
+        .btn-delete {
+            padding: 5px 10px;
+            margin: 0 5px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .btn-edit {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .btn-edit:hover {
+            background-color: #45a049;
+        }
+
+        .btn-delete {
+            background-color: #f44336;
+            color: white;
+        }
+
+        .btn-delete:hover {
+            background-color: #e53935;
+        }
+
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.4);
+            padding-top: 60px;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            margin: 5% auto;
+            padding: 20px;
+            border-radius: 8px;
+            width: 80%;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .modal input[type="text"],
+        .modal input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .modal button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .modal button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <!-- Form Container -->
+        <div class="form-container">
+            <h2>Thêm Mới Category Product</h2>
+            <form id="categoryProductForm">
+                <label for="name">Tên Category Product</label>
+                <input type="text" id="name" placeholder="Nhập tên category product" required>
+
+                <label for="description">Mô tả</label>
+                <input type="text" id="description" placeholder="Nhập mô tả" required>
+
+                <label for="status">Trạng thái</label>
+                <select id="status" required>
+                    <option value="true">Hiển thị</option>
+                    <option value="false">Ẩn</option>
+                </select>
+
+                <label for="image">Ảnh</label>
+                <input type="file" id="image" required>
+
+                <button type="submit">Thêm Category Product</button>
+            </form>
+        </div>
+
+        <!-- List Container -->
+        <div class="list-container">
+            <h2>Danh Sách Category Product</h2>
+            <table id="categoryProductList">
+                <thead>
+                    <tr>
+                        <th>Tên</th>
+                        <th>Mô tả</th>
+                        <th>Ảnh</th>
+                        <th>Trạng thái</th>
+                        <th>Hành động</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Categories will be listed here -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- Modal for Editing Category Product -->
+    <div id="editModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Sửa Category Product</h2>
+            <form id="editForm">
+                <label for="editName">Tên Category Product</label>
+                <input type="text" id="editName" placeholder="Nhập tên category product" required>
+
+                <label for="editDescription">Mô tả</label>
+                <input type="text" id="editDescription" placeholder="Nhập mô tả" required>
+
+                <label for="editStatus">Trạng thái</label>
+                <select id="editStatus" required>
+                    <option value="true">Hiển thị</option>
+                    <option value="false">Ẩn</option>
+                </select>
+
+                <label for="editImage">Ảnh</label>
+                <input type="file" id="editImage">
+
+                <button type="submit">Cập nhật</button>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        const apiUrl = 'http://localhost:3000/api/categoryProducts/get_list_Category_Product';
+
+        function fetchCategoryProducts() {
+            fetch(apiUrl)
+                .then(response => response.json())
+                .then(data => {
+                    const categoryProductList = document.getElementById('categoryProductList').getElementsByTagName('tbody')[0];
+                    categoryProductList.innerHTML = '';
+                    data.forEach(categoryProduct => {
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${categoryProduct.name}</td>
+                            <td>${categoryProduct.description}</td>
+                            <td><img src="${categoryProduct.image}" alt="${categoryProduct.name}" width="50"></td>
+                            <td>${categoryProduct.status ? 'Hiển thị' : 'Ẩn'}</td>
+                            <td>
+                                <div style="display: flex;flex-direction: row">
+                                    <button class="btn-edit" onclick="openEditModal('${categoryProduct._id}', '${categoryProduct.name}', '${categoryProduct.description}', '${categoryProduct.status}', '${categoryProduct.image}')">Sửa</button>
+                                    <button class="btn-delete" onclick="deleteCategoryProduct('${categoryProduct._id}')">Ẩn</button>
+                                </div>
+                            </td>
+                        `;
+                        categoryProductList.appendChild(row);
+                    });
+                })
+                .catch(error => console.error('Error fetching category products:', error));
+        }
+
+        // Handle adding new category product
+        const categoryProductForm = document.getElementById('categoryProductForm');
+        categoryProductForm.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const name = document.getElementById('name').value;
+            const description = document.getElementById('description').value;
+            const status = document.getElementById('status').value === 'true';
+            const image = document.getElementById('image').files[0];
+
+            const formData = new FormData();
+            formData.append('name', name);
+            formData.append('description', description);
+            formData.append('status', status);
+            formData.append('image', image);
+
+            fetch('http://localhost:3000/api/categoryProducts/add_category_product', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    fetchCategoryProducts();
+                    categoryProductForm.reset();
+                })
+                .catch(error => console.error('Error adding category product:', error));
+        });
+
+        // Handle edit category product modal
+        function openEditModal(id, name, description, status, image) {
+            document.getElementById('editName').value = name;
+            document.getElementById('editDescription').value = description;
+            document.getElementById('editStatus').value = status ? 'true' : 'false';
+            document.getElementById('editImage').value = '';
+
+            const modal = document.getElementById('editModal');
+            modal.style.display = "block";
+
+            const editForm = document.getElementById('editForm');
+            editForm.onsubmit = function (e) {
+                e.preventDefault();
+
+                const updatedName = document.getElementById('editName').value;
+                const updatedDescription = document.getElementById('editDescription').value;
+                const updatedStatus = document.getElementById('editStatus').value === 'true';
+                const updatedImage = document.getElementById('editImage').files[0];
+
+                const formData = new FormData();
+                formData.append('name', updatedName);
+                formData.append('description', updatedDescription);
+                formData.append('status', updatedStatus);
+                if (updatedImage) formData.append('image', updatedImage);
+
+                fetch(`http://localhost:3000/api/categoryProducts/update_category_product/${id}`, {
+                    method: 'PUT',
+                    body: formData
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        fetchCategoryProducts();
+                        modal.style.display = "none";
+                    })
+                    .catch(error => console.error('Error updating category product:', error));
+            };
+        }
+
+        // Close modal
+        function closeModal() {
+            document.getElementById('editModal').style.display = "none";
+        }
+
+        function deleteCategoryProduct(id) {
+            fetch(`http://localhost:3000/api/categoryProducts/delete_category_product/${id}`, {
+                method: 'DELETE'
+            })
+                .then(response => response.json())
+                .then(data => {
+                    fetchCategoryProducts();
+                })
+                .catch(error => console.error('Error deleting category product:', error));
+        }
+
+        window.onload = fetchCategoryProducts;
+    </script>
+
+
 </body>
+
 </html>
