--- a/src/DichVu.html
+++ b/src/DichVu.html
@@ -1,11 +1,402 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            width: 100%;
+            display: flex;
+            padding: 20px;
+        }
+
+        .form-container {
+            width: 30%;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin-right: 20px;
+        }
+
+        .form-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .form-container label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
+        .form-container input[type="text"],
+        .form-container input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .form-container button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px;
+            width: 100%;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .form-container button:hover {
+            background-color: #45a049;
+        }
+
+        .form-container img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+
+        .list-container {
+            width: 70%;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            overflow-y: auto;
+        }
+
+        .list-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            padding: 10px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        .btn-edit,
+        .btn-delete {
+            padding: 5px 10px;
+            margin: 0 5px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .btn-edit {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .btn-edit:hover {
+            background-color: #45a049;
+        }
+
+        .btn-delete {
+            background-color: #f44336;
+            color: white;
+        }
+
+        .btn-delete:hover {
+            background-color: #e53935;
+        }
+
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.4);
+            padding-top: 60px;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            margin: 5% auto;
+            padding: 20px;
+            border-radius: 8px;
+            width: 80%;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .modal input[type="text"],
+        .modal input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .modal button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .modal button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="container">
+        <!-- Form Container -->
+        <div class="form-container">
+            <h2>Thêm Mới Dịch Vụ</h2>
+            <form id="serviceForm">
+                <label for="name">Tên Dịch Vụ</label>
+                <input type="text" id="name" placeholder="Nhập tên dịch vụ" required>
+
+                <label for="id_category">Danh mục</label>
+                <select id="id_category" required>
+                    <!-- Dynamic category options will be populated here -->
+                </select>
+
+                <label for="description">Mô tả</label>
+                <input type="text" id="description" placeholder="Nhập mô tả">
+
+                <label for="price">Giá</label>
+                <input type="number" id="price" placeholder="Nhập giá" min="0" required>
+
+                <label for="duration">Thời lượng (phút)</label>
+                <input type="number" id="duration" placeholder="Nhập thời lượng" min="0" required>
+
+                <label for="images">Ảnh</label>
+                <input type="file" id="images" required>
+
+                <button type="submit">Thêm Dịch Vụ</button>
+            </form>
+        </div>
+
+        <!-- List Container -->
+        <div class="list-container">
+            <h2>Danh Sách Dịch Vụ</h2>
+            <table id="serviceList">
+                <thead>
+                    <tr>
+                        <th>Tên</th>
+                        <th>Danh mục</th>
+                        <th>Mô tả</th>
+                        <th>Giá</th>
+                        <th>Thời lượng</th>
+                        <th>Ảnh</th>
+                        <th>Trạng thái</th>
+                        <th>Hành động</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Services will be listed here -->
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Modal for Editing Service -->
+        <div id="editModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <h2>Sửa Dịch Vụ</h2>
+                <form id="editForm">
+                    <label for="editName">Tên Dịch Vụ</label>
+                    <input type="text" id="editName" placeholder="Nhập tên dịch vụ" required>
+
+                    <label for="editIdCategory">Danh mục</label>
+                    <select id="editIdCategory" required>
+                        <!-- Dynamic category options will be populated here -->
+                    </select>
+
+                    <label for="editDescription">Mô tả</label>
+                    <input type="text" id="editDescription" placeholder="Nhập mô tả">
+
+                    <label for="editPrice">Giá</label>
+                    <input type="number" id="editPrice" placeholder="Nhập giá" min="0" required>
+
+                    <label for="editDuration">Thời lượng (phút)</label>
+                    <input type="number" id="editDuration" placeholder="Nhập thời lượng" min="0" required>
+
+                    <label for="editImages">Ảnh</label>
+                    <input type="file" id="editImages">
+
+                    <button type="submit">Cập nhật</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+        const apiUrl = 'http://localhost:3000/api/services/get_list_service';
+
+        // Fetch categories for dropdown
+        function fetchCategories() {
+            fetch('http://localhost:3000/api/categoryProducts/get_list_Category_Product')
+                .then(response => response.json())
+                .then(data => {
+                    const categorySelect = document.getElementById('id_category');
+                    const editCategorySelect = document.getElementById('editIdCategory');
+                    categorySelect.innerHTML = '';
+                    editCategorySelect.innerHTML = '';
+
+                    data.forEach(category => {
+                        const option = `<option value="${category._id}">${category.name}</option>`;
+                        categorySelect.innerHTML += option;
+                        editCategorySelect.innerHTML += option;
+                    });
+                })
+                .catch(error => console.error('Error fetching categories:', error));
+        }
+
+        // Fetch services
+        function fetchServices() {
+            fetch(apiUrl)
+                .then(response => response.json())
+                .then(data => {
+                    const serviceList = document.getElementById('serviceList').getElementsByTagName('tbody')[0];
+                    serviceList.innerHTML = '';
+                    data.forEach(service => {
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                    <td>${service.name}</td>
+                    <td>${service.id_category.name}</td>
+                    <td>${service.description}</td>
+                    <td>${service.price}</td>
+                    <td>${service.duration}</td>
+                    <td><img src="${service.images}" alt="${service.name}" width="50"></td>
+                    <td>${service.status ? 'Hiển thị' : 'Ẩn'}</td>
+                    <td>
+                        <div style="display: flex;flex-direction: row">
+                            <button class="btn-edit" onclick="openEditModal('${service._id}', '${service.name}', '${service.id_category._id}', '${service.description}', ${service.price}, ${service.duration}, '${service.images}', ${service.status})">Sửa</button>
+                            <button class="btn-delete" onclick="deleteService('${service._id}')">Xóa</button>
+                        </div>
+                    </td>
+                `;
+                        serviceList.appendChild(row);
+                    });
+                })
+                .catch(error => console.error('Error fetching services:', error));
+        }
+
+        // Add new service
+        const serviceForm = document.getElementById('serviceForm');
+        serviceForm.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const formData = new FormData(serviceForm);
+            fetch('http://localhost:3000/api/services/add_service', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    fetchServices();
+                    serviceForm.reset();
+                })
+                .catch(error => console.error('Error adding service:', error));
+        });
+
+        // Edit service modal
+        function openEditModal(id, name, id_category, description, price, duration, images, status) {
+            document.getElementById('editName').value = name;
+            document.getElementById('editIdCategory').value = id_category;
+            document.getElementById('editDescription').value = description;
+            document.getElementById('editPrice').value = price;
+            document.getElementById('editDuration').value = duration;
+            document.getElementById('editImages').value = '';
+            document.getElementById('editStatus').value = status ? 'true' : 'false';
+
+            const modal = document.getElementById('editModal');
+            modal.style.display = "block";
+
+            const editForm = document.getElementById('editForm');
+            editForm.onsubmit = function (e) {
+                e.preventDefault();
+
+                const updatedData = new FormData(editForm);
+                fetch(`http://localhost:3000/api/services/update_service/${id}`, {
+                    method: 'PUT',
+                    body: updatedData
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        fetchServices();
+                        modal.style.display = "none";
+                    })
+                    .catch(error => console.error('Error updating service:', error));
+            };
+        }
+
+
+        function closeModal() {
+            document.getElementById('editModal').style.display = "none";
+        }
+
+        function deleteService(id) {
+            fetch(`http://localhost:3000/api/services/delete_service/${id}`, {
+                method: 'DELETE'
+            })
+                .then(response => response.json())
+                .then(data => {
+                    fetchServices();
+                })
+                .catch(error => console.error('Error deleting service:', error));
+        }
+
+        // Initialize page
+        window.onload = function () {
+            fetchCategories();
+            fetchServices();
+        };
+
+    </script>
 </body>
+
 </html>
